test/Fail/Issue1084.err
Issue1084.agda:5.1-13.10: error: [TerminationIssue]
Termination checking failed for the following functions:
  f, g
Problematic calls:
  g x
    (at Issue1084.agda:8.7-8)
  f x
    (at Issue1084.agda:13.7-8)
